# KIMs_Zephyr

./: .gitignore  README.md
ADXL345_i2c/: CMakeLists.txt  README.md  app.overlay  prj.conf
ADXL345_i2c/src/: main.c
